pydantic physical variables defined
